--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <script src="./script.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="./script.js" defer></script>
     <title>Dropdown Menu</title>
 </head>
 <body>
-    
+    <div class="dropdown">
+        <input type="text" class="textBox" placeholder="Dropdown Menu" readonly>
+        <ion-icon name="chevron-down-outline" class="arrow"></ion-icon>
+        <div class="options">
+            <div onclick="show('HTML')"> <ion-icon name="logo-html5"></ion-icon> HTML</div>
+            <div onclick="show('CSS')"> <ion-icon name="logo-css3"></ion-icon> CSS</div>
+            <div onclick="show('JavaScript')"> <ion-icon name="logo-javascript"></ion-icon> JavaScript</div>
+            <div onclick="show('Figma')"> <ion-icon name="logo-figma"></ion-icon> Figma</div>
+            <div onclick="show('Nodejs')"> <ion-icon name="logo-nodejs"></ion-icon> Nodejs</div>
+        </div>
+    </div>
 </body>
 </html>
